# kodo

./: Cargo.toml  README.md  build.rs  check.sh  keybindings.md  program.manifest
.github/workflows/: rust.yml
docs/: keybindings.md
src/: app.rs  custom_scroll_area.rs  lib.rs  main.rs  syntax_highlighting.rs  theme.rs  tree.rs
src/ui/: about.rs  explorer.rs  mod.rs  tree.rs
