[package]
name = "kodo_editor"
version = "0.1.0"
authors = ["55nknown"]
edition = "2021"
repository = "https://github.com/55nknown/kodo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "kodo"
path = "src/main.rs"

[dependencies]
eframe = "0.16.0" # Gives us egui, epi and web+native backends
syntect = { version = "4", default-features = false, features = [
  "default-fancy",
], optional = true }
image = "0.23.14"
rfd = "0.7"

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]
# epaint = { git = "https://github.com/emilk/egui", branch = "master" }

# If you want to use the bleeding edge version of `egui`:
eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
